src/objects/Orientation_Training__c.object
<CustomObject>
    <description>It will holds orientation &amp; training information records</description>
    <fields>
        <fullName>Available_Seats__c</fullName>
        <description>It Will display the number of Available Seats for Particular training.</description>
        <formula>Max_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will look up to chapter records in the account object</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Accounts related to an orientation and training need to be a chapter name</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Orientation_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It will capture the date information about the training started date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>It will capture the ending time information, about the orientation and training.</description>
        <inlineHelpText>End time should be greater than start time value</inlineHelpText>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00:PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>It will generate the auto number as unique value at the time of new record creation.</description>
        <displayFormat>OT-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>It will capture the location of orientation and training program</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <description>It will capture,number of members can participate to the training.</description>
        <label>Max Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prompt_upon_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is checked, Popup will display on Portal for volunteer to complete this training.</description>
        <label>Prompt upon Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>It will capture the starting time information, about the orientation and training program</description>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30:AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30:PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00:PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Done_By__c</fullName>
        <description>It will capture which type volunteer done the training</description>
        <label>Training Done By</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It will capture type value about the orientation and training,whether the training taken in online or in person</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>webinar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <description>It will capture the volunteer role.</description>
        <label>Volunteer Role</label>
        <picklist>
            <picklistValues>
                <fullName>Airport Greeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrity Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Outreach Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Day Event Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker’s Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translator &amp; Interpreter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Assist Phone Greeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Granter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Granter Mentor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <description>It will capture the information about the type of volunteer.</description>
        <label>Volunteer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Orientation &amp; Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Volunteer_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orientation &amp; Trainings</pluralLabel>
    <recordTypes>
        <fullName>Orientation</fullName>
        <active>true</active>
        <description>This record type associated with orientation page layout</description>
        <label>Orientation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>This record type associated with training page layout</description>
        <label>Training</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Negative_value_validation</fullName>
        <active>false</active>
        <description>It will restrict the users from entering negative value</description>
        <errorConditionFormula>Max_Capacity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Max_Capacity__c</errorDisplayField>
        <errorMessage>please enter value as &gt; 0</errorMessage>
    </validationRules>
</CustomObject>